# cs398

./: .gitignore  .gitmodules  README.md  build-iverilog.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: code-cov.yml
binaries/: iverilog-aarch64-apple-darwin  iverilog-x86_64-apple-darwin  iverilog-x86_64-unknown-linux-gnu  vvp-aarch64-apple-darwin  vvp-x86_64-apple-darwin
binaries/aarch64-apple-darwin/lib/ivl/: blif.tgt  cadpli.vpl  ivl  ivlpp  null.tgt  pcb.tgt  sizer.tgt  stub.tgt  system.vpi  v2005_math.vpi  v2009.vpi  va_math.vpi  vhdl.tgt  vhdl_sys.vpi  vhdl_textio.vpi  vhdlpp  vlog95.tgt  vpi_debug.vpi  vvp-s.conf  vvp.conf  vvp.tgt
binaries/x86_64-apple-darwin/lib/ivl/: blif.tgt  cadpli.vpl  ivl  ivlpp  null.tgt  pcb.tgt  sizer.tgt  stub.tgt  system.vpi  v2005_math.vpi  v2009.vpi  va_math.vpi  vhdl.tgt  (+8 more)
iverilog-build/lib/ivl/: cadpli.vpl  ivlpp  null.tgt  pcb.tgt  system.vpi  v2005_math.vpi  vhdl_sys.vpi  vhdl_textio.vpi  vvp-s.conf  vvp.conf
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: config.rs  consts.rs  error.rs  iverilog.rs  main.rs  project.rs  state.rs  util.rs  vcd.rs  vvp.rs
src-tauri/src/icarus/: iverilog.rs  mod.rs  vcd.rs  vvp.rs
src-tauri/tests/verilog/: correct.verilog  incorrect.verilog  interactive.verilog
src/components/: CompilationOutcomeDisplay.tsx  Dropdown.tsx  Editor.tsx  FileDialog.tsx  FileExplorer.tsx  MainScreen.tsx  MenuScreen.tsx  Output.tsx  ProjectMenu.tsx  TaskBar.tsx  WaveGraph.tsx  Waves.tsx
src/styles/: App.scss  FileExplorer.scss
(+37 files in other folders)
